--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ nav a:active {
 	text-decoration: none;
 }
 
+nav img {
+	height: 50px;
+}
+
 .montserrat-md {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
@@ -39,4 +43,10 @@ nav a:active {
 .montserrat-x-bold {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 800;
+}
+
+.rotation {
+	-ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Safari 3-8 */
+    transform: rotate(180deg);
 }
