--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,13 @@ nav a:link {
 	text-decoration: none;
 }
 
-nav a:hover {
+nav a.col-xs-offset-5:hover {
 	color: #fff;
 	text-decoration: none;
+}
+
+nav a.hidden-sm:hover {
+	font-size: 180%;
 }
 
 nav a:visited {
