--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,11 @@ nav img {
 	height: 50px;
 }
 
+nav i {
+	position: relative;
+	top: 22px;
+}
+
 .montserrat-md {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
@@ -72,21 +77,3 @@ section {
 	font-size: 17px;
 }
 
-
-/*
-.own-dropdown {
-	position: absolute;
-	z-index: 1;
-}
-
-.own-dropdown .col-sm-3 {
-	border: 1px solid #fff;
-	border-radius: 4px;
-	background-image: linear-gradient(to right, #2D0575, #4207AF);
-}
-
-.own-dropdown a {
-	color: #fff;
-	display: block;
-	font-size: 17px;
-}*/
