--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ section {
 }
 
 .my-dropdown {
+	display: none;
 	position: absolute;
 	border: 1px solid #fff;
 	border-radius: 4px;
@@ -77,3 +78,6 @@ section {
 	font-size: 17px;
 }
 
+.do-display {
+	display: inline-block !important;
+}
