--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+/*body, html {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}*/
+
+@media (max-width: 768px) {
+	iframe {
+		position: relative;
+		bottom: 5px;
+	}
+}
+
 nav {
 	background-image: linear-gradient(to right, #2D0575, #4207AF);
 	padding: 15px;
@@ -70,6 +82,7 @@ section {
 	border: 1px solid #fff;
 	border-radius: 4px;
 	background-image: linear-gradient(to right, #2D0575, #4207AF);
+	z-index: 1;
 }
 
 .my-dropdown a {
@@ -80,4 +93,9 @@ section {
 
 .do-display {
 	display: inline-block !important;
+}
+
+.background {
+    height: 100%;
+    background-image: linear-gradient(35deg, #3A05A4, #3F82E1);
 }
