Change opacity of dropdown

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ section {
 	position: absolute;
 	border: 1px solid #fff;
 	border-radius: 4px;
-	background-image: linear-gradient(to right, #2D0575, #4207AF);
+	background-image: linear-gradient(to right, rgba(45, 5, 117, 0.7), rgba(66, 7, 175, 0.7));
 	z-index: 1;
 }
 
