--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,6 @@
     overflow-y: hidden;
 }*/
 
-@media (max-width: 768px) {
-	iframe {
-		position: relative;
-		bottom: 5px;
-	}
-}
-
 nav {
 	background-image: linear-gradient(to right, #2D0575, #4207AF);
 	padding: 15px;
@@ -98,4 +91,9 @@ section {
 .background {
     height: 100%;
     background-image: linear-gradient(35deg, #3A05A4, #3F82E1);
+}
+
+.video {
+	position: relative;
+	bottom: 8px;
 }
