--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,16 @@ h3 {
 	color: #fff;
 	line-height: 20px;
 }
+
+.social-icons {
+	padding-top: 5%;
+	padding-bottom: 5%;
+}
+
+.social-media {
+	border-radius: 50%;
+	background-color: white;
+	width: 50px;
+	height: 50px;
+	display: inline-block;
+}
