--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 nav {
 	background-image: linear-gradient(to right, #2D0575, #4207AF);
 	padding: 15px;
+	box-shadow: 0px 5px 20px 0px;
 }
 
 nav a {
@@ -91,6 +92,7 @@ section {
 .background {
     height: 100%;
     background-image: linear-gradient(35deg, #3A05A4, #3F82E1);
+    z-index: -1;
 }
 
 .video {
