--- a/css/style.css
+++ b/css/style.css
@@ -13,22 +13,9 @@ nav a {
 	color: #fff;
 }
 
-nav .col-lg-offset-3 a {
-	font-size: 160%;
-}
-
 nav a:link {
 	font-size: 160%;
 	text-decoration: none;
-}
-
-nav a.col-xs-offset-5:hover {
-	color: #fff;
-	text-decoration: none;
-}
-
-nav a.hidden-sm:hover {
-	font-size: 180%;
 }
 
 nav a:visited {
@@ -39,6 +26,23 @@ nav a:visited {
 nav a:active {
 	color: #fff;
 	text-decoration: none;
+}
+
+nav a.col-xs-offset-5:hover {
+	color: #fff;
+	text-decoration: none;
+}
+
+.links {
+	padding-top: 10px;
+}
+
+div.links a {
+	font-size: 100%;
+}
+
+div.links a:hover {
+	font-size: 140%;
 }
 
 nav img {
@@ -70,12 +74,13 @@ section {
 	position: relative;
 }
 
-.my-dropdown {
+/*.my-dropdown {
 	display: none;
 	position: absolute;
 	border: 1px solid #fff;
 	border-radius: 4px;
-	background-image: linear-gradient(to right, rgba(45, 5, 117, 0.7), rgba(66, 7, 175, 0.7));
+	background-image: linear-gradient(to right, rgba(45, 5, 117, 0.7),
+	 rgba(66, 7, 175, 0.7));
 	z-index: 1;
 }
 
@@ -83,7 +88,7 @@ section {
 	color: #fff;
 	display: block;
 	font-size: 17px;
-}
+}*/
 
 .do-display {
 	display: inline-block !important;
@@ -135,3 +140,9 @@ h3 {
 	padding-right: 0;
 	padding-left: 0;
 }
+
+/*@media screen and (max-width: 768px) {
+    nav div.links a {
+		font-size: 50px;
+	}
+}*/
