Set background color for body tag

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     overflow-y: hidden;
 }*/
 
+body {
+	background-color: #3A05A4;
+}
+
 nav {
 	background-image: linear-gradient(to right, #2D0575, #4207AF);
 	padding: 15px;
