--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,10 @@ nav img {
 	height: 50px;
 }
 
-nav i {
+/*nav i {
 	position: relative;
 	top: 22px;
-}
+}*/
 
 .montserrat-md {
 	font-family: 'Montserrat', sans-serif;
