--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,10 @@ section {
 	display: inline !important;
 }
 
+.nav-bottom {
+	padding-bottom: 0px;
+}
+
 .background {
     height: 100%;
     background-image: linear-gradient(to top, #3A05A4, #3E75DC);
