--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ section {
 
 .background {
     height: 100%;
-    background-image: linear-gradient(to top, #3A05A4, #3E75DC);
+    background-image: linear-gradient(to top, #3A05A4, #3D88E5);
 }
 
 .video {
