--- a/css/style.css
+++ b/css/style.css
@@ -147,4 +147,14 @@ h3 {
 		font-size: 37px;
 		line-height: 26px;
 	}
+
+	.social-media {
+		height: 65px;
+		width: 65px;
+	}
+
+	.social-media i {
+		padding: 10px 0 0 0;
+		font-size: 42px;
+	}
 }
