--- a/css/style.css
+++ b/css/style.css
@@ -165,10 +165,16 @@ h3 {
 
 	.social-icons {
 		text-align: left;
+		padding-top: 10px;
 	}
 
 	.social-media {
 		text-align: center;
+	}
+
+	h3, .social-icons {
+		position: relative;
+		top: 140px;
 	}
 }
 
